Support configurable JSON definition imports